# Deep-Learning-Archive

./: .gitignore  README.md
02_ssd300-custom-transform-object-detection/: test2.py
03_U-Net-football-semantic-segmentation/: .gitignore  README.md  football-semantic-segmentation.ipynb
10_NLP-Text-Classification/: README.md  main.py  pyproject.toml
10_NLP-Text-Classification/notebooks/: nlp_text_classification.ipynb
11_seq2seq-attention-translation/: .gitignore  LICENSE  README.md  requirements.txt
12_NLP_Summarization/: README.md
12_NLP_Summarization/notebooks/: nlp-summarization.ipynb
12_NLP_Summarization/output/final_best_model/: generation_config.json  tokenizer.json  tokenizer_config.json
12_NLP_Summarization/output/kobart_legal_summary/checkpoint-1520/: generation_config.json  special_tokens_map.json  trainer_state.json
12_NLP_Summarization/output/kobart_legal_summary/checkpoint-2280/: config.json  trainer_state.json
13_SentimentAnalysis_Project/: FIRST_ORDER.md  INSTRUCTIONS.md  MISSION_GUIDE.md  README.md  requirements.txt
13_SentimentAnalysis_Project/notebooks/: ShoppingMall_Sentiment_Analysis.ipynb
13_SentimentAnalysis_Project/src/: data_loader.py  debug_notebook_logic.py  generate_notebook.py  temp_debug.py  temp_debug_part2.py  utils.py  verify_data.py
